--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
      container (section) encapsulated everthing (?)-->
       <section class="news-event"></section>
       <div class="section-title">
-        <h3 class="section-title">News Events</h3>
+        <h3 class="section-title-text">News Events</h3>
       </div>
       <div class="media-wrapper">
         <div class="news-container">
